SigmaCodebackup3rdSep/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Inventory (Account)</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Buying_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Avg Buying Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Available_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delivered Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Inventory1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packaged_Quantity__c</fullName>
        <label>Packaged Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Inventory2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picked_Quantity__c</fullName>
        <label>Picked Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Inventory</relationshipLabel>
        <relationshipName>Product_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Minimum_Qty__c</fullName>
        <formula>Available_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Minimum Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>ProductCode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchased_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Purchased Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Become_Out_Of_Stock__c</fullName>
        <label>Quantity To Become Out Of Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Delivered_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rental Delivered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Reserve_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rental Reserve Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Shipped_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rental Shipped Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reserved Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipped Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stock_Availability__c</fullName>
        <formula>Available_Qty__c  &gt;=  Quantity_To_Become_Out_Of_Stock__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stock_Out_Quantity__c</fullName>
        <label>Stock Out Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThresholdQuantity__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Threshold Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Available_Qty__c</fullName>
        <label>All Available Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Qty__c</fullName>
        <label>All Available Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Available_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Web Available Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Inventory</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Inventory ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Product_mandatory_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF((ISNULL(Available_Qty__c )),true,false)</errorConditionFormula>
        <errorMessage>Product is Required.</errorMessage>
    </validationRules>
</CustomObject>